--- a/consultas/pom.xml
+++ b/consultas/pom.xml
@@ -21,6 +21,11 @@
 
   <dependencies>
     <dependency>
+			<groupId>com.sun.mail</groupId>
+			<artifactId>javax.mail</artifactId>
+			<version>1.6.2</version>
+		</dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
