conclusão do crud de paciente.

--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
@@ -21,3 +21,7 @@ Unique.editora.CNPJ = O CNPJ deve ser único.
 # Validação campos Compra
 
 NotNull.compra.livro = Selecione um livro.
+
+# Validação campos Paciente
+
+past.paciente.dataNascimento = Digite uma data válida.
