listagem de consultas pelo login do paciente e criação de dependência entre Paciente e Consulta.

--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
@@ -22,6 +22,12 @@ Unique.editora.CNPJ = O CNPJ deve ser único.
 
 NotNull.compra.livro = Selecione um livro.
 
+# Validação campos Consulta
+
+NotNull.consulta.data = Selecione uma data e um horário.
+NotNull.consulta.medico = Selecione um médico.
+
 # Validação campos Paciente
 
 past.paciente.dataNascimento = Digite uma data válida.
+
