agendamento de consultas ainda incompleto.

--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
@@ -24,7 +24,8 @@ NotNull.compra.livro = Selecione um livro.
 
 # Validação campos Consulta
 
-NotNull.consulta.data = Selecione uma data e um horário.
+NotNull.consulta.data = Selecione uma data.
+NotNull.consulta.hora = Selecione um horário.
 NotNull.consulta.medico = Selecione um médico.
 
 # Validação campos Paciente
