Validacao do CPF do paciente.

--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
@@ -36,3 +36,5 @@ past.paciente.dataNascimento = Digite uma data válida.
 
 Unique.medico.CRM = O CRM deve ser unico
 size.medico.CRM = CRM deve conter 5 numeros e a sigla do estado
+
+Unique.paciente.CPF = Este CPF ja esta um uso
