--- a/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
+++ b/consultorio-T2/consultorio/src/main/resources/ValidationMessages.properties
@@ -38,3 +38,5 @@ Unique.medico.CRM = O CRM deve ser unico
 size.medico.CRM = CRM deve conter 5 numeros e a sigla do estado
 
 Unique.paciente.CPF = Este CPF ja esta um uso
+
+Unique.usuario.email = Este email já está em uso
